Fixed invisible clickable menus for member/user list

--- a/app/styles/layouts/members.css
+++ b/app/styles/layouts/members.css
@@ -45,6 +45,7 @@ p.gh-members-list-email {
 
 .gh-member-actions-menu.fade-out {
     animation-duration: .001s;
+    pointer-events: none;
 }
 
 
